<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The TVBD</string>

    <!-- MENU -->
    <string name="menu_last_series">Last series</string>
    <string name="menu_search">Search a serie</string>
    <string name="menu_account">My account</string>
    <string name="menu_logout">Logout</string>

    <!-- ACCOUNT -->
    <string name="apikey">API Key : </string>
    <string name="userkey">ID User : </string>
    <string name="username">Username : </string>
    <string name="account_header">Your account</string>
    <string name="language_select">Choose your language :</string>
    <string name="submit">Submit</string>

    <!-- SEARCH -->
    <string name="search_header">Search</string>
    <string name="search_title">Movie, series, anime title</string>

    <!-- LIST -->
    <string name="series_header">Series list</string>

    <!-- ELEMENT -->
    <string name="serie_header">Serie informations</string>
    <string name="serie_mark_tvdb">Mark from TVDB :</string>
    <string name="serie_mark_user">Mark from you :</string>
    <string name="serie_chapters">Chapters</string>
    <string name="serie_pictures">Pictures</string>
    <string name="serie_poster">Poster</string>
    <string name="serie_favorite_add">Add as a favorite serie</string>
    <string name="serie_favorite_remove">Remove the favorite serie</string>
    <string name="serie_share">Share the serie</string>
    <string name="serie_actor">Access to the webpage of the actor</string>
</resources>
