<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sanaebelhaj.thetvbd.Views.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/search_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/btnSearch"
            android:layout_toStartOf="@+id/btnSearch"
            android:ems="10"
            android:hint="@string/search_title"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/searchText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/textViewLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/searchText"
            android:layout_marginTop="18dp"
            android:text="TextView" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
